--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -33,13 +33,13 @@
 
   <actions>
     <!-- Add your actions here -->
-    <group id="PluginTest" text="小朋友你是不是有很多问号" description="小朋友你是不是有很多问号">
+    <!--<group id="PluginTest" text="小朋友你是不是有很多问号" description="小朋友你是不是有很多问号">
       <add-to-group group-id="MainMenu" anchor="last"/>
       <action id="MyPluginAction" class="MyPluginAction" text="不要点">
-        <!--<add-to-group group-id="PluginTest" anchor="first"/>-->
+        &lt;!&ndash;<add-to-group group-id="PluginTest" anchor="first"/>&ndash;&gt;
         <keyboard-shortcut first-keystroke="control alt 1" second-keystroke="control 1" keymap="$default"/>
       </action>
-    </group>
+    </group>-->
   </actions>
 
 </idea-plugin>
