--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>com.zt.json-editor</id>
   <name>JSON Editor</name>
-  <version>1.9</version>
+  <version>2.0</version>
   <vendor email="hj_zhengt@163.com" url="https://me.csdn.net/">zhengtao</vendor>
 
   <description><![CDATA[
@@ -23,7 +23,8 @@
   <idea-version since-build="173.0"/>
 
   <extensions defaultExtensionNs="com.intellij">
-    <toolWindow id="JSON Editor" secondary="true" icon="/icons/main-icon.svg" anchor="right" factoryClass="com.jsoneditor.JsonEditor" />
+    <toolWindow id="JSON Editor" secondary="true" icon="/icons/main-icon.svg"
+                anchor="right" factoryClass="com.jsoneditor.JsonEditor" />
   </extensions>
 
   <actions>
