--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>com.zt.json-editor</id>
   <name>JSON Editor</name>
-  <version>2.2</version>
+  <version>2.3</version>
   <vendor email="hj_zhengt@163.com" url="https://me.csdn.net/">zhengtao</vendor>
 
   <description><![CDATA[
@@ -24,7 +24,7 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <toolWindow id="JSON Editor" secondary="true" icon="/icons/main-icon.svg"
-                anchor="right" factoryClass="com.jsoneditor.JsonEditor"/>
+                anchor="right" factoryClass="com.jsoneditor.JsonEditorFactory"/>
   </extensions>
 
   <actions>
