--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.zt.json-editor</id>
     <name>JSON Editor</name>
-    <version>2.3</version>
+    <version>2.4</version>
     <vendor email="hj_zhengt@163.com" url="https://me.csdn.net/">zhengtao</vendor>
 
     <description>
@@ -13,11 +13,15 @@
     <change-notes>
         <![CDATA[
           2020-08-04<br>
-          For the first time, there may be some small bugs. Hope more support.<br>
+          For the first time, there may be some small bugs.<br>
           <br>
           2020-08-12<br>
           version: 1.6<br>
           fix some bugs.<br>
+          <br>
+          2020-09-17<br>
+          version: 2.4<br>
+          add date support.<br>
         ]]>
     </change-notes>
 
