--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.zt.json-editor</id>
     <name>JSON Editor</name>
-    <version>2.8.1</version>
+    <version>2.8.2</version>
     <vendor email="hj_zhengt@163.com" url="https://me.csdn.net/">zhengtao</vendor>
 
     <description>
@@ -28,7 +28,7 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
 
-    <idea-version since-build="173.0" until-build="202.*"/>
+    <idea-version since-build="144"/>
 
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="JsonEditor" secondary="false" icon="/icons/main-icon.svg"
