--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
     <id>com.zt.json-editor</id>
     <name>JSON Editor</name>
-    <version>2.9</version>
-    <vendor email="hj_zhengt@163.com" url="https://me.csdn.net/">zhengtao</vendor>
+    <version>2.9.1</version>
+    <vendor email="hj_zhengt@163.com" url="https://github.com/zt422680855/JsonEditor">zhengtao</vendor>
 
     <description>
         <![CDATA[
